maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:34: error: ')' expected but 'if' found.
    if(!aMurNord(getX(),getY()-1) && getIndication(getX(),getY()+1)<ind){
    ^JediEscaper:37: error: ';' expected but 'if' found.
    if(!aMurOuest(getX()+1,get(Y)) && getIndication(getX()+1,getY())<ind){
    ^